<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>de.fraunhofer.iosb.ilt</groupId>
	<artifactId>SensorThingsImporter</artifactId>
	<version>0.2-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>SensorThingsImporter</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<mainClass>de.fraunhofer.iosb.ilt.sensorthingsimporter.MainApp</mainClass>
	</properties>

	<organization>
		<name>Fraunhofer IOSB</name>
	</organization>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>2.6</version>
				<executions>
					<execution>
						<id>unpack-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>unpack-dependencies</goal>
						</goals>
						<configuration>
							<excludeScope>system</excludeScope>
							<excludeGroupIds>junit,org.mockito,org.hamcrest</excludeGroupIds>
							<outputDirectory>${project.build.directory}/classes</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.2.1</version>
				<executions>
					<execution>
						<id>unpack-dependencies</id>

						<phase>package</phase>
						<goals>
							<goal>exec</goal>
						</goals>
						<configuration>
							<executable>${java.home}/../bin/javafxpackager</executable>
							<arguments>
								<argument>-createjar</argument>
								<argument>-nocss2bin</argument>
								<argument>-appclass</argument>
								<argument>${mainClass}</argument>
								<argument>-srcdir</argument>
								<argument>${project.build.directory}/classes</argument>
								<argument>-outdir</argument>
								<argument>${project.build.directory}</argument>
								<argument>-outfile</argument>
								<argument>${project.build.finalName}.jar</argument>
							</arguments>
						</configuration>
					</execution>
					<execution>
						<id>default-cli</id>
						<goals>
							<goal>exec</goal>
						</goals>
						<configuration>
							<executable>${java.home}/bin/java</executable>
							<commandlineArgs>${runfx.args}</commandlineArgs>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<compilerArguments>
						<bootclasspath>${sun.boot.class.path}${path.separator}${java.home}/lib/jfxrt.jar</bootclasspath>
					</compilerArguments>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.16</version>
				<configuration>
					<additionalClasspathElements>
						<additionalClasspathElement>${java.home}/lib/jfxrt.jar</additionalClasspathElement>
					</additionalClasspathElements>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>bintray</id>
			<url>https://jcenter.bintray.com</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>${project.groupId}</groupId>
			<artifactId>Configurable</artifactId>
			<version>0.1</version>
		</dependency>
		<dependency>
			<groupId>${project.groupId}</groupId>
			<artifactId>SensorThingsClient</artifactId>
			<version>0.10</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.1.8</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-csv</artifactId>
			<version>1.4</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.5</version>
		</dependency>
	</dependencies>
</project>
